--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <h1 class="header-logo-wrapper">
+        <img src="./img/logo.svg" alt="ロゴ" class="header-logo" />
+      </h1>
+    </header>
+  </body>
 </html>
