--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header class="header">
       <h1 class="header-logo-wrapper">
-        <img src="./img/logo.svg" alt="ロゴ" class="header-logo" />
+        <img src="./img/logo.svg" alt="Grand Players" class="header-logo" />
       </h1>
     </header>
     <section class="hero">
