--- a/index.html
+++ b/index.html
@@ -33,5 +33,26 @@
         </div>
       </div>
     </section>
+    <section class="about" id="about">
+      <div class="container">
+        <h2 class="section-ttl about-section-ttl">
+          What Is
+          <span class="about-accent-red">Grand</span>
+          <span class="about-accent-yellow">Players</span>
+          ?
+        </h2>
+        <div class="about-body-and-img">
+          <p class="about-body">
+            Grand Players
+            は従量課金制のオンデマンド動画を用いたオンラインギターレッスンサービスです。好きな時間に、自分にあったレベルでギターの上達を目指すことができます。
+            また、複数のレッスンをまとめた「コース」を受講することで、より体系的にテクニックを身に着けることもできます。
+            「コース」を受講された方は、現役ギタリスト講師との個別面談で、より最適なレッスンの選択をサポートいたします。
+          </p>
+          <div class="about-img-wrapper">
+            <img src="./img/live.png" alt="" class="about-img" />
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
