スペルミス修正

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
       </div>
     </section>
-    <section class="cources" id="cources">
+    <section class="courses" id="courses">
       <div class="container">
         <h2 class="section-ttl">Courses</h2>
         <div class="courses-block-container">
@@ -66,7 +66,7 @@
               <p class="course-description">
                 フロントマンコースではコードワーク、ストロークを中心とした基礎をはじめ、魅せる動きのコツなども伝授します。講師の実際のライブ映像を本人が解説するレッスンもご用意しております。
               </p>
-              <div class="cource-show-more">もっと見る</div>
+              <div class="course-show-more">もっと見る</div>
             </div>
           </a>
           <a href="." class="course-card">
@@ -77,7 +77,7 @@
               <p class="course-description">
                 バッキングコースではコードワーク、ストロークを中心とした基礎をはじめ、バンド全体のバランスを俯瞰した音作りの手法などを伝授します。アンプの機種に応じた調整のコツから、EQを用いた本格的な調整まで取り扱っております。
               </p>
-              <div class="cource-show-more">もっと見る</div>
+              <div class="course-show-more">もっと見る</div>
             </div>
           </a>
           <a href="." class="course-card">
@@ -88,7 +88,7 @@
               <p class="course-description">
                 リードギターコースでは、ピッキングやポジショニングといった観点で、課題となるリフを詳細に解説するレッスンを通じて、リードギターに必要な技術の習得を目指します。
               </p>
-              <div class="cource-show-more">もっと見る</div>
+              <div class="course-show-more">もっと見る</div>
             </div>
           </a>
           <a href="." class="course-card">
@@ -99,7 +99,7 @@
               <p class="course-description">
                 ギターソロコースでは、アドリブの方法論や特殊奏法のレッスンを通して、とにかくカッコいいソロを弾くための技術を伝授します。上級者向けのコースとなります。
               </p>
-              <div class="cource-show-more">もっと見る</div>
+              <div class="course-show-more">もっと見る</div>
             </div>
           </a>
         </div>
