Playersと？の間隔修正

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
         <h2 class="section-ttl about-section-ttl">
           What Is
           <span class="about-accent-red">Grand</span>
-          <span class="about-accent-yellow">Players</span>
-          ?
+          <span class="about-accent-yellow">Players</span>?
         </h2>
         <div class="about-body-and-img">
           <p class="about-body">
