a href="#"、display block削除

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="container">
         <h2 class="section-ttl">Courses</h2>
         <div class="courses-block-container">
-          <a href="." class="course-card">
+          <a href="#" class="course-card">
             <div class="course-img">
               <h3 class="course-name">Frontman</h3>
             </div>
@@ -68,7 +68,7 @@
               <div class="course-show-more">もっと見る</div>
             </div>
           </a>
-          <a href="." class="course-card">
+          <a href="#" class="course-card">
             <div class="course-img">
               <h3 class="course-name">Backing</h3>
             </div>
@@ -79,7 +79,7 @@
               <div class="course-show-more">もっと見る</div>
             </div>
           </a>
-          <a href="." class="course-card">
+          <a href="#" class="course-card">
             <div class="course-img">
               <h3 class="course-name">Lead</h3>
             </div>
@@ -90,7 +90,7 @@
               <div class="course-show-more">もっと見る</div>
             </div>
           </a>
-          <a href="." class="course-card">
+          <a href="#" class="course-card">
             <div class="course-img">
               <h3 class="course-name">Solo</h3>
             </div>
@@ -102,7 +102,7 @@
             </div>
           </a>
         </div>
-        <a href="." class="button show-more-button">
+        <a href="#" class="button show-more-button">
           <div class="show-more-all">すべてのコースを見る</div>
           <div class="button-arrow">
             <img src="./img/arrow-right.svg" alt="more" class="button-icon" />
