--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </section>
     <section class="about" id="about">
       <div class="container">
-        <h2 class="section-ttl about-section-ttl">
+        <h2 class="section-title about-section-title">
           What Is
           <span class="about-accent-red">Grand</span>
           <span class="about-accent-yellow">Players</span>?
@@ -55,7 +55,7 @@
     </section>
     <section class="courses" id="courses">
       <div class="container">
-        <h2 class="section-ttl">Courses</h2>
+        <h2 class="section-title">Courses</h2>
         <div class="courses-block-container">
           <a href="#" class="course-card">
             <div class="course-img">
@@ -112,7 +112,7 @@
     </section>
     <section class="signup" id="signup">
       <div class="container signup-container">
-        <h2 class="section-ttl signup-section-ttl">Let’s Try!</h2>
+        <h2 class="section-title signup-section-title">Let’s Try!</h2>
         <p class="signup-description">
           Grand
           Playersでは、ご利用登録いただけた方に対し、３レッスン分の無料枠をプレゼントいたします！
